# Stegolab

./: .gitignore  README.md  pyproject.toml  stegolab_engineering_spec.md
docs/superpowers/plans/: 2026-06-28-stegolab-01-core-foundation.md  2026-06-28-stegolab-02-image-methods-and-cli.md  2026-06-28-stegolab-03-zerowidth-text-and-analyze.md  2026-06-28-stegolab-04-lm-layer.md
src/stegolab/: __init__.py  cli.py
src/stegolab/core/: __init__.py  bitstream.py  capacity.py  errors.py  frame.py  io.py  keys.py  payload_codec.py  types.py
src/stegolab/eval/: __init__.py  text_metrics.py
src/stegolab/image/: __init__.py  bitplane_image.py  edge_adaptive_lsb.py  io_image.py  lsb.py  randomized_lsb.py
src/stegolab/text/: __init__.py  zero_width.py
tests/cli/: test_cli_analyze.py  test_cli_image.py  test_cli_text.py
tests/core/: test_bitstream.py  test_capacity.py  test_errors.py  test_frame.py  test_io.py  test_keys.py  test_payload_codec.py  test_types.py
tests/eval/: test_text_metrics.py
tests/image/: test_bitplane.py  test_edge_adaptive_lsb.py  test_io_image.py  test_lsb.py  test_randomized_lsb.py
tests/text/: test_zero_width.py
